# VSA_GUI

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
mac/: Package.swift  README.md  bootstrap.sh
mac/Sources/VSACodec/: codec
mac/Sources/VSACodec/include/: VSACodec.h
mac/Sources/VSAnalyzer/: VSAnalyzerApp.swift
mac/Sources/VSAnalyzer/Codec/: AnalyzerViewModel.swift  H264BridgeParser.swift
mac/Sources/VSAnalyzer/UI/: ContentView.swift
resources/: resources.qrc
resources/sample/: mock_stream.json
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/codec/: annexb.c  annexb.h  bit_reader.c  bit_reader.h  codec_version.c  codec_version.h  h264_nalu.h  h264_slice_header.c  h264_slice_header.h  h264_sps.c  h264_sps.h  rbsp.c  rbsp.h
src/model/: CodingUnit.cpp  CodingUnit.h  FrameData.cpp  FrameData.h  H264DataProvider.cpp  H264DataProvider.h  MockDataProvider.cpp  MockDataProvider.h  StreamInfo.cpp  StreamInfo.h
src/tools/: vsa_parse.cpp
src/views/: AreaChartView.cpp  AreaChartView.h  BarChartView.cpp  BarChartView.h  BitrateCurveView.cpp  BitrateCurveView.h  ChartTabWidget.cpp  ChartTabWidget.h  CodingUnitTree.cpp  CodingUnitTree.h  MotionVectorView.cpp  MotionVectorView.h  StreamInfoTree.cpp  StreamInfoTree.h  ThumbnailsView.cpp  ThumbnailsView.h  VideoPreviewWidget.cpp  VideoPreviewWidget.h
src/widgets/: MainToolbar.cpp  MainToolbar.h  ViewModeSelector.cpp  ViewModeSelector.h
tests/: test_annexb.cpp  test_annexb_large.cpp  test_bitreader.cpp  test_main.cpp  test_rbsp.cpp  test_slice_header.cpp  test_smoke.cpp  test_sps.cpp
tests/fixtures/: tiny_clip.h264
tests/scripts/: elecard_stats.py  fetch_elecard_sample.sh  install_jm.sh  vsa_extract.sh
